--- a/app.json
+++ b/app.json
@@ -1,10 +1,13 @@
 {
   "pages":[
-    "pages/bindphone/bindphone",
+    "pages/search/search",
     "pages/index/index",
-    "pages/about/about",
     "pages/order/order",
+    "pages/about/about",
+    
     "pages/collection/collection",
+    "pages/bindphone/bindphone",
+    "pages/coupon/coupon",
     "pages/commission/commission"
   ],
   "tabBar": {
@@ -38,7 +41,6 @@
     "backgroundTextStyle":"dark",
     "navigationBarBackgroundColor": "#02c1c9",
     "navigationBarTitleText": "淅峡生活平台",
-    "navigationBarTextStyle":"#ffffff",
-    "enablePullDownRefresh":true
+    "navigationBarTextStyle":"#ffffff"
   }
 }
