add buysuccess page and change index nav item

--- a/app.json
+++ b/app.json
@@ -4,8 +4,10 @@
     "pages/order/order",
     "pages/about/about",
 
+    "pages/building/building",
     "pages/evaluate/evaluate",
     "pages/usesuccess/usesuccess",
+    "pages/buysuccess/buysuccess",
     
     "pages/collection/collection",
     "pages/bindphone/bindphone",
