--- a/project.config.json
+++ b/project.config.json
@@ -9,8 +9,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.6.6",
-	"appid": "wx97c80a21a7ad2948",
-	"projectname": "demo",
+	"appid": "wx948a4f68de794073",
+	"projectname": "%E8%A5%BF%E5%B3%A1%E6%B4%BE",
 	"condition": {
 		"search": {
 			"current": -1,
