--- a/app.json
+++ b/app.json
@@ -54,7 +54,7 @@
   "window":{
     "backgroundTextStyle":"dark",
     "navigationBarBackgroundColor": "#02c1c9",
-    "navigationBarTitleText": "武陟派",
+    "navigationBarTitleText": "西峡派",
     "navigationBarTextStyle":"#ffffff"
   }
 }
