--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.6.6",
-	"appid": "wx948a4f68de794073",
+	"appid": "wxe131045b3a10aed9",
 	"projectname": "%E8%A5%BF%E5%B3%A1%E6%B4%BE",
 	"condition": {
 		"search": {
